--- a/views/wwiwo.pug
+++ b/views/wwiwo.pug
@@ -5,7 +5,7 @@ html(lang='en')
         link(rel='stylesheet', href='/styles.css')
     body
         h1 What was I working on?
-        p(id='task-name', onclick='showTaskNameEditor();')= task.name
+        p(id='task-name')= task.name
         textarea(id='task-name-editor')= task.name
         h3 State of work
         p= task.state
