--- a/public/styles.css
+++ b/public/styles.css
@@ -1,3 +1,18 @@
+#page-title {
+  font-size: 3em;
+  text-align: center;
+}
+
+#task {
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 680px;
+}
+
+#task-name {
+  font-size: 2em;
+}
+
 #task-name-editor {
   display: none;
 }
