--- a/views/wwiwo.pug
+++ b/views/wwiwo.pug
@@ -4,7 +4,8 @@ html(lang='en')
         title What was I working on?
         link(rel='stylesheet', href='/styles.css')
     body
-        h1 What was I working on?
+      div(id='task')
+        p(id='page-title') What was I working on?
         p(id='task-name')= task.name
         textarea(id='task-name-editor')= task.name
         h3 State of work
