--- a/public/styles.css
+++ b/public/styles.css
@@ -1,12 +1,29 @@
+* {
+  margin: 0;
+  padding: 0;
+}
+
+ol {
+  padding-left: 1em;
+}
+
+body {
+  background-color: #C7974F;
+  font-family: Andada;
+}
+
 #page-title {
   font-size: 3em;
   text-align: center;
+  padding: 1em;
 }
 
 #task {
   margin-left: auto;
   margin-right: auto;
   max-width: 680px;
+  background-color: #F3DB91;
+  padding: 2em;
 }
 
 #task-name {
@@ -15,4 +32,13 @@
 
 #task-name-editor {
   display: none;
+}
+
+#state-editor {
+  display: none;
+}
+
+h3 {
+  margin-top: 1em;
+  margin-bottom: 0.5em;
 }
