--- a/views/wwiwo.pug
+++ b/views/wwiwo.pug
@@ -2,15 +2,19 @@ doctype html
 html(lang='en')
     head
         title What was I working on?
+        link(rel='stylesheet', href='//fonts.googleapis.com/css?family=Andada')
         link(rel='stylesheet', href='/styles.css')
     body
+      h1(id='page-title') What was I working on?
       div(id='task')
-        p(id='page-title') What was I working on?
-        p(id='task-name')= task.name
+
+        h2(id='task-name')= task.name
         textarea(id='task-name-editor')= task.name
-        h3 State of work
-        p= task.state
-        textarea= task.state
+
+        h3 State
+        p(id='state')= task.state
+        textarea(id='state-editor')= task.state
+
         h3 Next steps
         ol
           each step in task.nextSteps
