--- a/public/styles.css
+++ b/public/styles.css
@@ -1,6 +1,7 @@
 * {
   margin: 0;
   padding: 0;
+  font-family: Andada;
 }
 
 ol {
@@ -9,21 +10,38 @@ ol {
 
 body {
   background-color: #C7974F;
-  font-family: Andada;
 }
 
-#page-title {
+.page-title {
   font-size: 3em;
   text-align: center;
   padding: 1em;
 }
 
-#task {
+.container {
   margin-left: auto;
   margin-right: auto;
-  max-width: 680px;
+  max-width: 40em;
   background-color: #F3DB91;
   padding: 2em;
+  border-radius: 1em;
+}
+
+#create-page-form {
+  text-align: center;
+}
+
+#create-page-button {
+  padding: 1em 2em;
+  background-color: green;
+  border: none;
+  border-radius: 0.5em;
+  color: white;
+  font-size: 1.5em;
+}
+
+#create-page-button:hover {
+  background-color: darkgreen;
 }
 
 #task-name {
@@ -32,10 +50,23 @@ body {
 
 #task-name-editor {
   display: none;
+  font-size: 2em;
+  width: 20em;
+  height: 1.5em;
 }
 
 #state-editor {
   display: none;
+  width: 40em;
+  height: 4em;
+  font-size: 1em;
+}
+
+#next-steps-editor {
+  display: none;
+  width: 40em;
+  height: 4em;
+  font-size: 1em;
 }
 
 h3 {
