--- a/views/wwiwo.pug
+++ b/views/wwiwo.pug
@@ -5,8 +5,8 @@ html(lang='en')
         link(rel='stylesheet', href='//fonts.googleapis.com/css?family=Andada')
         link(rel='stylesheet', href='/styles.css')
     body
-      h1(id='page-title') What was I working on?
-      div(id='task')
+      h1(class='page-title') What was I working on?
+      div(class='container')
 
         h2(id='task-name')= task.name
         textarea(id='task-name-editor')= task.name
@@ -16,8 +16,7 @@ html(lang='en')
         textarea(id='state-editor')= task.state
 
         h3 Next steps
-        ol
-          each step in task.nextSteps
-            li= step
+        p(id='next-steps')= task.nextSteps
+        textarea(id='next-steps-editor')= task.nextSteps
 
         script(src='/script.js')
