--- a/public/styles.css
+++ b/public/styles.css
@@ -27,6 +27,11 @@ body {
   border-radius: 1em;
 }
 
+.instructions {
+  font-size: 1.5em;
+  text-align: center;
+}
+
 #create-page-form {
   text-align: center;
 }
@@ -65,4 +70,14 @@ body {
 h3 {
   margin-top: 1em;
   margin-bottom: 0.5em;
+}
+
+footer {
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  padding: 1rem;
+  background-color: #F3DB91;
+  text-align: center;
 }
