--- a/views/wwiwo.pug
+++ b/views/wwiwo.pug
@@ -5,6 +5,8 @@ html(lang='en')
         link(rel='stylesheet', href='//fonts.googleapis.com/css?family=Andada')
         link(rel='stylesheet', href='/styles.css')
     body
+      header This page is for you. Bookmark it so you can return to it later.
+        span(id='hide-note') Hide
       h1(class='page-title') What was I working on?
       div(class='container')
 
@@ -20,3 +22,4 @@ html(lang='en')
         textarea(id='next-steps-editor' class='small-editor')= task.nextSteps
 
         script(src='/script.js')
+      footer Copyright 2016 Andrew A. Liu
