--- a/public/styles.css
+++ b/public/styles.css
@@ -92,6 +92,6 @@ footer {
   left: 0;
   padding: 1.25em;
   background-color: #F3DB91;
-  text-align: left;
+  text-align: center;
   font-size: 0.75em;
 }
