--- a/views/home.pug
+++ b/views/home.pug
@@ -1,9 +1,6 @@
 doctype html
 html(lang='en')
-    head
-        title What was I working on?
-        link(rel='stylesheet', href='//fonts.googleapis.com/css?family=Andada')
-        link(rel='stylesheet', href='/static/styles.css')
+    include ./includes/head.pug
     body
       h1(class='page-title') What was I working on?
       div(class='container')
@@ -14,4 +11,4 @@ html(lang='en')
         br
         form(id='create-page-form', action='/create', method='post')
           button(id='create-page-button') Create your page
-      footer Copyright 2016 Andrew A. Liu
+      include ./includes/footer.pug
