WIP: Working on adding functionality for Hide button

--- a/public/styles.css
+++ b/public/styles.css
@@ -60,10 +60,14 @@ body {
   height: 1.5em;
 }
 
-#hide-note {
+#hide-button {
   padding: 0 1em;
   color: royalblue;
   cursor: pointer;
+}
+
+#hide-button:hover {
+  color: blue;
 }
 
 .small-editor {
