--- a/views/wwiwo.pug
+++ b/views/wwiwo.pug
@@ -3,7 +3,7 @@ html(lang='en')
     include ./includes/head.pug
     body
       header This page is for you. Bookmark it so you can return to it later.
-        span(id='hide-note') Hide
+        span(id='hide-button') Hide
       h1(class='page-title') What was I working on?
       div(class='container')
 
