Add helper links to footer

--- a/views/includes/footer.pug
+++ b/views/includes/footer.pug
@@ -1,1 +1,5 @@
-footer Copyright 2016 Andrew A. Liu
+footer
+  span(style='float: right;') Copyright 2016 Andrew A. Liu
+  a local
+  span &nbsp;|&nbsp;
+  a production
