Add helper links to footer

--- a/views/includes/footer.pug
+++ b/views/includes/footer.pug
@@ -1,5 +1,6 @@
 footer
   span(style='float: right;') Copyright 2016 Andrew A. Liu
-  a local
+  a(id='link-to-local' target='_blank') local
   span &nbsp;|&nbsp;
-  a production
+  a(id='link-to-production' target='_blank') production
+  script(src='/static/footer.js')
