--- a/views/wwiwo.pug
+++ b/views/wwiwo.pug
@@ -3,7 +3,8 @@ html(lang='en')
     include ./includes/head.pug
     body
       header This page is for you. Bookmark it so you can return to it later.
-        span(id='hide-button') Hide
+        span &nbsp;&nbsp;&nbsp;&nbsp;
+        a(id='link-to-hide-reminder') Hide
       h1(class='page-title') What was I working on?
       div(class='container')
 
@@ -18,5 +19,5 @@ html(lang='en')
         p(id='next-steps')= task.nextSteps
         textarea(id='next-steps-editor' class='small-editor')= task.nextSteps
 
-        script(src='/static/script.js')
+        script(src='/static/wwiwo.js')
       include ./includes/footer.pug
