--- a/views/includes/footer.pug
+++ b/views/includes/footer.pug
@@ -1,6 +1,6 @@
 footer
-  span(style='float: right;') Copyright 2016 Andrew A. Liu
+  span(style='float: right;') © 2016 Andrew A. Liu
   a(id='link-to-local' target='_blank') local
-  span &nbsp;|&nbsp;
+  span &nbsp;&nbsp;|&nbsp;&nbsp;
   a(id='link-to-production' target='_blank') production
   script(src='/static/footer.js')
