--- a/views/includes/footer.pug
+++ b/views/includes/footer.pug
@@ -1,5 +1,7 @@
 footer
-  span(style='float: right;') © 2016 Andrew A. Liu
+  span(style='float: right;') © 2016
+    span &nbsp;
+    a(href='mailto:liu.anray@gmail.com') Andrew A. Liu
   a(id='link-to-local' target='_blank') local
   span &nbsp;&nbsp;|&nbsp;&nbsp;
   a(id='link-to-production' target='_blank') production
