--- a/views/home.pug
+++ b/views/home.pug
@@ -2,13 +2,14 @@ doctype html
 html(lang='en')
     include ./includes/head.pug
     body
-      h1(class='page-title') What was I working on?
-      div(class='container')
-        p(class='instructions')
-          | Make it easy to pick up where you left off.<br />
-          | Jot down the state of your work and next steps.
-        br
-        br
-        form(id='create-page-form', action='/create', method='post')
-          button(id='create-page-button') Create your page
+      div(class='vertically-centered-container')
+        h1(class='page-title') What was I working on?
+        div(class='container')
+          p(class='instructions')
+            | Make it easy to pick up where you left off.<br />
+            | Jot down the state of your work and next steps.
+          br
+          br
+          form(id='create-page-form', action='/create', method='post')
+            button(id='create-page-button') Create your page
       include ./includes/footer.pug
