--- a/public/styles.css
+++ b/public/styles.css
@@ -13,9 +13,17 @@ body {
   height: 100%;
 }
 
-.vertically-centered-container {
+.home-container {
   position: absolute;
   top: 45%;
+  left: 50%;
+  margin-right: -50%;
+  transform: translate(-50%, -50%);
+}
+
+.wwiwo-container {
+  position: absolute;
+  top: 40%;
   left: 50%;
   margin-right: -50%;
   transform: translate(-50%, -50%);
