--- a/views/home.pug
+++ b/views/home.pug
@@ -2,7 +2,7 @@ doctype html
 html(lang='en')
     include ./includes/head.pug
     body
-      div(class='vertically-centered-container')
+      div(class='home-container')
         h1(class='page-title') What was I working on?
         div(class='container')
           p(class='instructions')
