--- a/views/wwiwo.pug
+++ b/views/wwiwo.pug
@@ -6,22 +6,20 @@ html(lang='en')
         header This page is for you. Bookmark it so you can return to it later.
           span &nbsp;&nbsp;&nbsp;&nbsp;
           a(id='link-to-hide-reminder') Hide
-      br
-      br
-      br
-      h1(class='page-title') What was I working on?
-      div(class='container')
+      div(class='wwiwo-container')
+        h1(class='page-title') What was I working on?
+        div(class='container')
 
-        h2(id='task-name')= task.name
-        textarea(id='task-name-editor')= task.name
+          h2(id='task-name')= task.name
+          textarea(id='task-name-editor')= task.name
 
-        h3 State
-        p(id='state')= task.state
-        textarea(id='state-editor' class='small-editor')= task.state
+          h3 State
+          p(id='state')= task.state
+          textarea(id='state-editor' class='small-editor')= task.state
 
-        h3 Next steps
-        p(id='next-steps')= task.nextSteps
-        textarea(id='next-steps-editor' class='small-editor')= task.nextSteps
+          h3 Next steps
+          p(id='next-steps')= task.nextSteps
+          textarea(id='next-steps-editor' class='small-editor')= task.nextSteps
 
-        script(src='/static/wwiwo.js')
+          script(src='/static/wwiwo.js')
       include ./includes/footer.pug
