Fix JS bug, set min height for State and Next Steps, otherwise there's no place for the user to click if they are empty

--- a/public/styles.css
+++ b/public/styles.css
@@ -77,6 +77,14 @@ body {
   height: 1.5em;
 }
 
+#state {
+  min-height: 2em;
+}
+
+#next-steps {
+  min-height: 2em;
+}
+
 a {
   color: royalblue;
   cursor: pointer;
