Improve hide/show reminder so it doesn't depend on the URL

--- a/views/includes/footer.pug
+++ b/views/includes/footer.pug
@@ -5,4 +5,6 @@ footer
   a(id='link-to-local' target='_blank') local
   span &nbsp;&nbsp;|&nbsp;&nbsp;
   a(id='link-to-production' target='_blank') production
+  span &nbsp;&nbsp;|&nbsp;&nbsp;
+  a(id='link-to-show-reminder') show reminder
   script(src='/static/footer.js')
