--- a/views/wwiwo.pug
+++ b/views/wwiwo.pug
@@ -2,10 +2,9 @@ doctype html
 html(lang='en')
     include ./includes/head.pug
     body
-      if (showReminder)
-        header This page is for you. Bookmark it so you can return to it later.
-          span &nbsp;&nbsp;&nbsp;&nbsp;
-          a(id='link-to-hide-reminder') Hide
+      header(id='reminder' style=showReminder ? 'visibility: visible' : 'visibility: hidden') This page is for you. Bookmark it so you can return to it later.
+        span &nbsp;&nbsp;&nbsp;&nbsp;
+        a(id='link-to-hide-reminder') Hide
       div(class='wwiwo-container')
         h1(class='page-title') What was I working on?
         div(class='container')
@@ -21,5 +20,5 @@ html(lang='en')
           p(id='next-steps')= task.nextSteps
           textarea(id='next-steps-editor' class='small-editor')= task.nextSteps
 
-          script(src='/static/wwiwo.js')
       include ./includes/footer.pug
+      script(src='/static/wwiwo.js')
