Move title on wwiwo page to footer, make textarea same size as label

--- a/views/includes/footer.pug
+++ b/views/includes/footer.pug
@@ -1,7 +1,8 @@
 footer
-  span(style='float: right;') © 2016
+  span(style='float: right;') What was I working on? © 2016
     span &nbsp;
     a(href='mailto:liu.anray@gmail.com') Andrew A. Liu
+  span For development:&nbsp;&nbsp;
   a(id='link-to-local' target='_blank') local
   span &nbsp;&nbsp;|&nbsp;&nbsp;
   a(id='link-to-production' target='_blank') production
