--- a/views/includes/footer.pug
+++ b/views/includes/footer.pug
@@ -1,5 +1,5 @@
 footer
-  span(style='float: right;') What was I working on? © 2016
+  span(style='float: right;') What was I working on?&nbsp;&nbsp;© 2016
     span &nbsp;
     a(href='mailto:liu.anray@gmail.com') Andrew A. Liu
   span For development:&nbsp;&nbsp;
