--- a/views/home.pug
+++ b/views/home.pug
@@ -1,6 +1,7 @@
 doctype html
 html(lang='en')
     include ./includes/head.pug
+    link(rel='stylesheet', href='/static/home.css')
     body
       div(class='home-container')
         h1(class='page-title') What was I working on?
