--- a/views/wwiwo.pug
+++ b/views/wwiwo.pug
@@ -1,6 +1,7 @@
 doctype html
 html(lang='en')
     include ./includes/head.pug
+    link(rel='stylesheet', href='/static/wwiwo.css')
     body
       header(id='reminder' style=showReminder ? 'visibility: visible' : 'visibility: hidden') This page is for you. Bookmark it so you can return to it later.
         span &nbsp;&nbsp;&nbsp;&nbsp;
