Changed color scheme

--- a/views/wwiwo.pug
+++ b/views/wwiwo.pug
@@ -3,8 +3,8 @@ html(lang='en')
     include ./includes/head.pug
     link(rel='stylesheet', href='/static/wwiwo.css')
     body
-      header(id='reminder' style=showReminder ? 'visibility: visible' : 'visibility: hidden') This page is for you. Bookmark it so you can return to it later.
-        span &nbsp;&nbsp;&nbsp;&nbsp;
+      header(id='reminder' style=showReminder ? 'visibility: visible' : 'visibility: hidden') This page is for you. Please bookmark it so you can return to it later.
+        span &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
         a(id='link-to-hide-reminder') Hide
       div(class='wwiwo-container')
         div(class='container')
