--- a/public/shared.css
+++ b/public/shared.css
@@ -5,17 +5,17 @@
 }
 
 body {
-  background-color: #C7974F;
   height: 100%;
+  color: #545454;
 }
 
 .container {
   margin-left: auto;
   margin-right: auto;
   width: 40em;
-  background-color: #F3DB91;
   padding: 2em;
-  border-radius: 1em;
+  border-top: 1px solid gainsboro;
+  border-bottom: 1px solid gainsboro;
 }
 
 a {
@@ -28,19 +28,11 @@ a:hover {
   color: blue;
 }
 
-header {
-  padding: 1.25em;
-  background-color: #F3DB91;
-  text-align: center;
-  font-size: 0.75em;
-}
-
 footer {
   position: absolute;
   right: 0;
   bottom: 0;
   left: 0;
   padding: 1.25em;
-  background-color: #F3DB91;
   font-size: 0.75em;
 }
